package com.directi.training.isp.exercice_refactored;

public interface IDoor
{
    void lock();

    void unlock();

    void open();

    void close();
}
