package com.directi.training.isp.exercice_refactored;

public interface ITimedDoor extends IDoor
{
    void timeOutCallback();
}
